0032989: Data Exchange, RWGltf_CafReader - fill in metadata map from asset.extras