src/RWGltf/RWGltf_GltfJsonParser.hxx
@@ -94,6 +94,9 @@ public:
   //! Set metadata map.
   void SetMetadata (TColStd_IndexedDataMapOfStringString& theMetadata) { myMetadata = &theMetadata; }
 
+  //! Set flag to translate asset.extras into metadata.
+  void SetReadAssetExtras (bool theToRead) { myToReadAssetExtras = theToRead; }
+
   //! Return transformation from glTF to OCCT coordinate system.
   const RWMesh_CoordinateSystemConverter& CoordinateSystemConverter() const { return myCSTrsf; }
 
@@ -439,6 +442,7 @@ protected:
   bool                      myToLoadAllScenes;  //!< flag to load all scenes in the document, FALSE by default
   bool                      myUseMeshNameAsFallback; //!< flag to use Mesh name in case if Node name is empty, TRUE by default
   bool                      myToProbeHeader;  //!< flag to probe header without full reading, FALSE by default
+  bool                      myToReadAssetExtras; //!< flag to translate asset.extras into metadata, TRUE by default
 
 #ifdef HAVE_RAPIDJSON
   GltfElementMap myGltfRoots[RWGltf_GltfRootElement_NB]; //!< glTF format root elements
